# earthquake.rs

./: .gitignore  Cargo.toml  README.md
data/: clientlocations.csv
src/: analysis.rs  data.rs  main.rs  tui.rs
