[package]
name = "earthquake"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"                                      # For parsing csv data
ratatui = "0.29.0"                                 # Terminal user iterface
reqwest = "0.12.12"                                # Api requests
tokio = { version = "1", features = ["full"] }     # Async runtime
serde = { version = "1", features = ["derive"] }   # De-serialisation
chrono = { version = "0.4", features = ["serde"] } # Handling datetime
itertools = "0.14.0"                               # More iterator functions
color-eyre = "0.6.3"                               # Pretty error messages

[dev-dependencies]
tokio-macros = "2.4.0"
